# tinkaros

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.svelte  style.css  tooltip-styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/resolve/: config.rs  mod.rs  structs.rs
src-tauri/src/state/: mod.rs
src-tauri/src/update/: configs.rs  mod.rs  mods.rs  status.rs  structs.rs
src/components/: Account.svelte  ChangelogCard.svelte  Loading.svelte  ModCard.svelte  Progress.svelte  Settings.svelte  Tooltip.svelte  infoPopup.svelte  selectCustomLauncher.svelte  updatePopup.svelte
src/lib/: Launcher.svelte  Main.svelte  Updater.svelte  Welcome.svelte
src/scripts/: parseTime.ts  toasts.ts
src/stores/: config.ts  state.ts
