[package]
name = "tinkaros"
version = "0.0.0"
description = "An updater/launcher for AHMS"
authors = ["Hbarni"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
toml = "0.7.2"
base64 = "0.21.0"
fs_extra = "1.2.0"
futures-util = "0.3.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["stream", "json"] }
tauri = { version = "1.2.4", features = ["dialog-all", "fs-exists", "shell-open"] }
ferinth = "2.8.0"
furse = "1.5.9"
tokio = "1.28.1"
zip = "0.6.6"
thiserror = "1.0.40"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
